[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Items/Weapons/DemonCommanderSword.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/PlayerSprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/SpriteArm.gd" type="Script" id=5]
[ext_resource path="res://Items/Armor/DefaultArmor.tres" type="SpriteFrames" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/active = false

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.80877
height = 13.927

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 16.0001

[sub_resource type="Animation" id=7]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "RunRight"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/IdleRight/node = SubResource( 9 )
states/IdleRight/position = Vector2( 454, -20.828 )
states/RunRight/node = SubResource( 10 )
states/RunRight/position = Vector2( 251, -24.828 )
transitions = [ "RunRight", "IdleRight", SubResource( 11 ), "IdleRight", "RunRight", SubResource( 12 ) ]
start_node = "IdleRight"
graph_offset = Vector2( -192.749, -211.183 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 10, 20 )
z_index = 1
collision_layer = 2
script = ExtResource( 1 )
MAX_SPEED = 150

[node name="SpriteArm" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = ExtResource( 7 )
speed_scale = 3.0
script = ExtResource( 5 )

[node name="Sprite" parent="." instance=ExtResource( 4 )]
material = SubResource( 4 )
vframes = 1

[node name="Hurtbox2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4.029 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 1, 0 )
collision_layer = 2
collision_mask = 4

[node name="Hurtbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.962866, 4.08753 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = -12.33
anims/IdleRight = SubResource( 7 )
anims/RunRight = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )

[node name="Weapon" parent="." instance=ExtResource( 2 )]

[connection signal="animation_finished" from="SpriteArm" to="." method="_on_SpriteArm_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
